Git_WGBH_QC/src/objects/Requested_Search__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Requested Search</relationshipLabel>
        <relationshipName>Requested_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Insert</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Query_SQL__c</fullName>
        <label>Query (SQL)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Search_Request__c</referenceTo>
        <relationshipLabel>Requested Search</relationshipLabel>
        <relationshipName>Requested_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requested Search</label>
    <nameField>
        <displayFormat>RS-{0000000}</displayFormat>
        <label>Requested Search#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requested Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>